Mostly done, can't figure out how to run multiple operators in one go.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="calculator-container">
       
         <div class="calculator-display">
+          <div class="lastResults"></div>
           <div class="results"></div>
         </div>
     
@@ -30,7 +31,7 @@
         <button class="number" id="8" value="8">8</button>
         <button class="number" id="9" value="9">9</button>
         <button class="operator subtract">-</button>
-        <button class="number">.</button>
+        <button class="number"></button>
         <button class="number" id="0" value="0">0</button>
         <button class="equals two-cols">=</button>
         </div>
