--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="calculator-container">
       
-        <div class="calculator-display">
+              <div class="calculator-display">
           <div class="lastResults"></div>
-          <div class="results"></div>
+          <div class="display"></div>
         </div>
     
         <button class="clear two-cols">AC</button>
@@ -31,7 +31,7 @@
         <button class="number" id="8" value="8">8</button>
         <button class="number" id="9" value="9">9</button>
         <button class="operator subtract">-</button>
-        <button class="number"></button>
+        <button class="number" id="deci">.</button>
         <button class="number" id="0" value="0">0</button>
         <button class="equals two-cols">=</button>
         </div>
